# bonbon

./: Makefile  README.md  bonbon_v1.pcf
firmware/: bonbon.uf2
firmware/bonbon/: CMakeLists.txt  bonbon.c
pcb/bonbon_v1/: bonbon.kicad_pcb  bonbon.kicad_pro  bonbon.kicad_sch
rtl/: blinky.v
